# DroneDream

./: .env.example  .gitignore  01_PRD.md  02_ARCHITECTURE.md  03_UI_SPEC.md  04_API_SPEC.md  05_DATA_MODEL.md  07_EXECUTION_PLAN.md  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  response.py  schemas.py  secrets.py
backend/app/orchestration/: __init__.py  acceptance.py  aggregation.py  cma_es_optimizer.py  constants.py  events.py  job_manager.py  llm_parameter_proposer.py  metrics.py  optimizer.py  report_generator.py  repro_manifest.py  runner.py  trial_executor.py
backend/app/routers/: artifacts.py  batches.py  health.py  jobs.py  runtime.py  trials.py
backend/app/services/: __init__.py  jobs.py  pdf_report.py
backend/app/simulator/: __init__.py  artifact_schema.py  base.py  factory.py  mock.py  real_cli.py  real_stub.py
backend/app/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/tests/: conftest.py  test_advanced_scenario_schema.py  test_artifacts_api.py  test_auth_api.py  test_batches_api.py  test_cma_es_optimizer.py  test_config.py  test_db_migrations.py  test_ece498_pipeline_modes.py  test_gazebo_track_marker.py  test_health.py  test_hosted_openai_mode.py  test_jobs_api.py  test_local_px4_launch_wrapper.py  test_optimizer.py  test_orchestration.py  test_phase8_iterative_loop.py  test_phase8_llm_proposer.py  test_phase8_real_cli.py  test_px4_gazebo_runner.py  test_px4_offboard_track_executor.py  test_report_generator.py  test_runtime_api.py  test_simulator_adapter.py  test_storage.py
deploy/hosted-b/: .env.example  docker-compose.yml  nginx.conf
docker/: backend.Dockerfile  frontend.Dockerfile  worker-px4.Dockerfile  worker-real-px4-vnc.Dockerfile  worker.Dockerfile
docs/: 01-overview.md  02-architecture.md  02_ARCHITECTURE.md  04_API_SPEC.md  05-api-reference.md  06-data-model.md  06_ACCEPTANCE_CRITERIA.md  11-operations.md  ACCEPTANCE_REPORT.md  API_QUICKSTART.md  ARCHITECTURE.md  DEVELOPMENT.md  DroneDream_Local_Gazebo_GUI_Workflow.md  DroneDream_Runpod_Gazebo_GUI_Workflow.md  HOSTED_B_SINGLE_TENANT.md  IMPLEMENTATION_NOTES.md  MAIN_FEATURE_AUDIT_2026-04-28.md  OPTIMIZER_GUIDE.md  PHASE8_REAL_SIM_AND_GPT_TUNING.md  PX4_GAZEBO_RUNNER.md  README.md  REAL_CLI_ARTIFACT_SCHEMA.md  RUNPOD_FULL_SETUP.md  RUNPOD_GAZEBO_VISUALIZATION.md  SIMULATOR_ADAPTERS.md
docs/Manuals/: README.md  dronedream_ece498_user_manual.md  dronedream_new_batch_user_manual.md  dronedream_new_job_user_manual.md
docs/archive/: 02_architecture-legacy.md  README.md  (+4 more)
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
scripts/: check-all.sh  check-backend.sh  check-frontend.sh  check-worker.sh  check.sh  dev-backend.sh  dev-frontend.sh  dev-worker.sh  run-gazebo-vnc.sh
worker/: README.md  pyproject.toml
worker/app/: main.py
worker/drone_dream_worker/: __init__.py  config.py  main.py
(+64 files in other folders)
