[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-dream-worker"
version = "0.1.0"
description = "DroneDream background worker (trial executor)"
readme = "README.md"
requires-python = ">=3.11"
# The worker re-uses the backend's ORM models and orchestration code so that
# there is a single source of truth for the job/trial state machine. The
# backend package is installed editable alongside this one (see env setup).
dependencies = [
    "drone-dream-backend",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
drone-dream-worker = "drone_dream_worker.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drone_dream_worker*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
